--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -45,8 +45,8 @@
 		display: block
 		position: absolute
 		// mobile style
-		bottom: 30px
-		left: 30px
+		bottom: 40px
+		left: 40px
 		font-size: 12px
 		font-weight: normal
 		line-height: 1.67
@@ -88,12 +88,12 @@
 		color: $light-brend
 		width: 20px
 		height: 20px
-		transition: opacity .2s 0s, transform .2s 0s, visibility 0s .3s
+		transition: opacity .2s 0s, transform .2s 0s, visibility 0s .3s, top .3s 0
 		&.active
 			visibility: visible
 			opacity: 1
 			transform: none
-			transition: opacity .4s .1s, transform .4s .1s, visibility 0s
+			transition: opacity .4s .1s, transform .4s .1s, visibility 0s, top .3s 0
 	&-link
 		display: inline-block
 		text-transform: uppercase
