--- a/src/sass/components/_shareblock.sass
+++ b/src/sass/components/_shareblock.sass
@@ -1,6 +1,11 @@
 .share-block
 	text-align: center
 	padding: 80px
+	box-sizing: border-box
+	+vertical
+	&-inner
+		display: inline-block
+		vertical-align: middle
 	&__title
 		font-size: 12px
 		font-weight: normal
