--- a/src/templates/4-1-agency-models.pug
+++ b/src/templates/4-1-agency-models.pug
@@ -8,7 +8,7 @@ block content
 	.barba-container(data-namespace="about")
 		.block.about
 			.logo-wrap.bg-brend
-				a(href="/home.html")
+				a(href="./home.html")
 					+icon('logo')
 			.block-content.bg-brend
 				
@@ -54,13 +54,13 @@ block content
 								.swiper-pagination
 						.about-content__slider-msg
 							p.text-big Do you want to become the new face of INMODELS?
-							a(href="/7-0-Become-model.html").bttn.transparent
+							a(href="./7-0-Become-model.html").bttn.transparent
 								span Become a model		
 					.link-footer
 						ul.link-footer-inner
 							li.link-footer__item
-								a.link-big.active(href="/4-0-agency.html") about agency
+								a.link-big.active(href="./4-0-agency.html") about agency
 							li.link-footer__item
-								a.link-big(href="/4-1-agency-models.html") for models
+								a.link-big(href="./4-1-agency-models.html") for models
 							li.link-footer__item
-								a.link-big(href="/4-2-partners.html") for partners
+								a.link-big(href="./4-2-partners.html") for partners
