--- a/src/templates/5-0-gallery.pug
+++ b/src/templates/5-0-gallery.pug
@@ -8,7 +8,7 @@ block content
 	.barba-container(data-namespace="gallery")
 		.block
 			.logo-wrap.bg-brend
-				a(href="/home.html")
+				a(href="./home.html")
 					+icon('logo')
 			.block-content.bg-brend
 				.gallery-page
@@ -16,19 +16,19 @@ block content
 					.gallery-filter.js-isotope-filter.swiper-container
 						.swiper-wrapper
 							.swiper-slide.gallery-filter__bttn
-								button.gallery-filter__item.no-barba(data-filter="*") #all
+								.gallery-filter__item.no-barba(data-filter="*") #all
 							.swiper-slide.gallery-filter__bttn
-								button.gallery-filter__item.no-barba(data-filter=".newface") #newface
+								.gallery-filter__item.no-barba(data-filter=".newface") #newface
 							.swiper-slide.gallery-filter__bttn
-								button.gallery-filter__item.no-barba(data-filter=".shooting") #shooting
+								.gallery-filter__item.no-barba(data-filter=".shooting") #shooting
 							.swiper-slide.gallery-filter__bttn
-								button.gallery-filter__item.no-barba(data-filter=".editorial") #editorial
+								.gallery-filter__item.no-barba(data-filter=".editorial") #editorial
 							.swiper-slide.gallery-filter__bttn
-								button.gallery-filter__item.no-barba(data-filter=".campaign") #campaign
+								.gallery-filter__item.no-barba(data-filter=".campaign") #campaign
 							.swiper-slide.gallery-filter__bttn
-								button.gallery-filter__item.no-barba(data-filter=".show") #show
+								.gallery-filter__item.no-barba(data-filter=".show") #show
 							.swiper-slide.gallery-filter__bttn
-								button.gallery-filter__item.no-barba(data-filter=".video") #video
+								.gallery-filter__item.no-barba(data-filter=".video") #video
 						.swiper-scrollbar.gallery-filter-bar
 							
 					.gallery-wrap.ajax-list
@@ -36,13 +36,5 @@ block content
 						+gallery-item('gallery-2.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'newface campaign')
 						+gallery-item('gallery-3.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'show shooting newface')
 						+gallery-item('gallery-4.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'video show')
-						+gallery-item('gallery-5.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'editorial editorial')
-						+gallery-item('gallery-6.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'editorial editorial campaign')
-						+gallery-item('gallery-7.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'newface editorial show')
-						+gallery-item('gallery-8.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'show shooting newface')
-						+gallery-item('gallery-1.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'editorial editorial campaign')
-						+gallery-item('gallery-2.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'video show')
-						+gallery-item('gallery-3.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'show shooting newface')
-						+gallery-item('gallery-4.jpg', '20 dec 2017', 'Sasha Pronenko', 'For POLOGEORGIS furs collections', 'editorial editorial campaign')
 						.ajax-pager-wrap.lazy.gallery-page__footer
 							a.link-big.ajax-pager-link.no-barba(href="gallery-add.html", data-wrapper-class="gallery-wrap") load more
