--- a/src/templates/home.pug
+++ b/src/templates/home.pug
@@ -19,7 +19,7 @@ block content
 					.swiper-slide
 						img(src="img/anastasia-2-big.jpg", alt="slider")
 			.logo-wrap
-				a(href="/home.html")
+				a(href="./home.html")
 					+icon('logo')
 			.index-title-wrap
 				.index-title-inner
