--- a/src/templates/layouts/_mixins.pug
+++ b/src/templates/layouts/_mixins.pug
@@ -16,17 +16,18 @@ mixin button(text, add_class)
 
 mixin share-block
 	.share-block.bg-darken
-		.share-block__title share
-		.share-block__link
-			a.link-social(href="#") Facebook
-			a.link-social(href="#") Twitter
-			a.link-social(href="#") Google +
-		.share-block__bttn
-			a(href="6-0-contacts.html").bttn.reverse
-									span business request
+		.share-block-inner
+			.share-block__title share
+			.share-block__link
+				a.link-social(href="#") Facebook
+				a.link-social(href="#") Twitter
+				a.link-social(href="#") Google +
+			.share-block__bttn
+				a(href="./6-0-contacts.html").bttn.reverse
+					span business request
 
 mixin gallery-item(img, date, title, short, add_class)
-	a(href="/5-1-gallery-news.html" class='gallery-item '+ add_class)
+	a(href="./5-1-gallery-news.html" class='gallery-item '+ add_class)
 		.gallery-item__img
 			img(src="img/"+img, alt="gallery-item")
 		.gallery-item__info
@@ -40,7 +41,7 @@ mixin models-item(img, name, add_class)
 		- var add_class = ''
 	else
 		- var add_class = ' ' + add_class
-	a(href="/3-0-inner.html" class='models-item '+ add_class)
+	a(href="./3-0-inner.html" class='models-item '+ add_class)
 		.models-item__img
 			img(src="img/"+img, alt="models-item")
 		.models-item__info
@@ -49,7 +50,7 @@ mixin models-item(img, name, add_class)
 mixin search-block
 	.search-block#search-block
 		.form-search
-			form
+			form(onsubmit="return false;")
 				.input-item.search-field
 					input.input-field(type="search" id="searching")
 					label.input-label(for="searching")
