--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -13,6 +13,7 @@ body
 	min-width: 320px
 	overflow-x: hidden
 	overflow-y: auto
+	background-color: $bg-brend
 	&.show-menu
 	    position: fixed
 h1, .h1
