--- a/src/sass/_layouts.sass
+++ b/src/sass/_layouts.sass
@@ -60,15 +60,16 @@
 		padding-bottom: 1px
 		width: 100%
 		padding: 0 40px
+		box-sizing: border-box
 	&-grid
 		position: relative
 		z-index: 2
-		padding-bottom: 1px
 		.aside
 			width: 100%
 			padding-right: 40px
 			padding-left: 40px
 			text-align: left
+			box-sizing: border-box
 			&-content
 				width: 100%
 				position: relative
@@ -87,13 +88,13 @@
 			padding-right: 40px
 			padding-left: 40px
 			padding-bottom: 40px
+			box-sizing: border-box
 			text-align: left
 			&-content
 				width: 100%
 	&-inner
 		position: relative
 		z-index: 2
-		padding-bottom: 1px
 		width: 100%
 		height: 100%
 		display: block
@@ -101,10 +102,12 @@
 			width: 100%
 			height: 100%
 			padding: 0 40px
+			box-sizing: border-box
 		.main
 			width: 100%
 			height: 100vh
 			padding: 40px
+			box-sizing: border-box
 
 .bg-white
 	background-color: $bg-color
