--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -95,18 +95,20 @@
 .models-page
 	padding-bottom: 40px
 	padding-left: 30px
+	height: 100vh
 	.models-wrap
 		font-size: 0
 		margin: 0 -5px
 		position: relative
+		padding-bottom: 80px
 		.models-item
-			display: inline-block
+			// display: inline-block
 			width: calc(50% - 10px)
 			position: relative
 			margin: 5px
 			font-size: 0
 			+r(768)
-				width: calc(100% - 10px)
+				width: 100%
 			&__title
 				color: #ffffff
 				font-size: 36px
@@ -161,7 +163,7 @@
 			opacity: 1
 	.ajax-pager-wrap
 		position: absolute
-		bottom: 0
+		bottom: 40px
 		left: 0
 
 .gallery-page
@@ -184,9 +186,11 @@
 			display: inline-block
 			padding: 7px
 			background-color: transparent
+			font-size: 20px
+			font-weight: normal
 		&-bar.swiper-scrollbar
 			background-color: $light-brend
-			height: 2px;
+			height: 1px;
 			.swiper-scrollbar-drag
 				background-color: rgba($color, .5)
 
@@ -194,15 +198,17 @@
 		font-size: 0
 		margin: 0 -10px
 		position: relative
-		margin-bottom: 200px
+		margin-bottom: 120px
+		// +r(768)
+		// 	margin: 0
 		.gallery-item
-			display: inline-block
+			// display: inline-block
 			width: calc(50% - 10px)
 			position: relative
 			margin: 5px
 			font-size: 0
 			+r(768)
-				width: calc(100% - 10px)
+				width: 100%
 			&.hide-gallery
 				border: 1px solid red
 			&__date
@@ -248,7 +254,7 @@
 					opacity: 1
 					.gallery-item__date
 						opacity: 1
-						transition: transform .4s .6s, opacity .2s .6s
+						transition: transform .3s .2s, opacity .2s .2s
 						transform: none
 					.gallery-item__title
 						opacity: 1
@@ -474,7 +480,7 @@
 		margin: 60px 0 40px
 		&-bar.swiper-scrollbar
 			background-color: $light-brend
-			height: 2px;
+			height: 1px;
 			.swiper-scrollbar-drag
 				background-color: rgba($color, .5)
 
@@ -504,6 +510,8 @@
 	padding-bottom: 100px
 	display: flex
 	align-items: stretch
+	+r(550)
+		padding-bottom: 150px
 	.swiper-wrapper
 		height: 100%
 		// +r(450)
@@ -535,28 +543,32 @@
 			&.swiper-slide-social
 				display: flex
 				.share-block
-					display: flex
-					flex-direction: column
+					display: block
 					width: 100%
 					height: 100%
 					padding: 20px
 					&__title
-						margin-bottom: 20%
+						margin-top: 10px
+						margin-bottom: 15px
 					&__link
 						margin: 0
 						+r(500)
 						a
 							font-size: 20px
+							&:not(:last-child)
+								margin-bottom: 5px
 					&__bttn
 						margin: 0 
-						margin-top: 20%
+						margin-top: 30px
 	&.swiper-container-horizontal
 		& >.swiper-scrollbar.inner-slider-bar
 			bottom: 70px
 			left: 0
 			width: 100%
 			background: transparent
-			height: 1px;
+			height: 2px;
+			+r(550)
+				bottom: 120px
 			.swiper-scrollbar-drag
 				height: 100%
 				position: relative
@@ -575,15 +587,22 @@
 			display: flex
 			justify-content: space-between
 			width: 100%
+			+r(550)
+				flex-wrap: wrap
+				justify-content: flex-start
+				bottom: 25px
 			.slide-target
 				display: inline-block
 				background-color: transparent
 				font-size: 12px
 				text-transform: uppercase
-				color: $link-color
-				
+				color: $link-color				
 				line-height: 1.67
 				letter-spacing: 3px
+				+r(550)
+					width: 45%
+					margin: 0 2%
+					margin-bottom: 5px
 				&.active
 					color: $btn-color
 
@@ -622,8 +641,8 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete.lg-current 
 		display: flex
 		flex-wrap: wrap
 		justify-content: center
-		padding-top: 60px
-		padding-bottom: 35px
+		padding-top: 30px
+		padding-bottom: 30px
 		&-inner
 			width: 100%
 			text-align: center
@@ -631,11 +650,24 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete.lg-current 
 		.social-links
 			margin-top: auto
 			margin-bottom: 0
+			.navigation-link__item
+				&:not(:first-child)
+					margin-left: 15px
+					+r(550)
+						margin-left: 0
+				+r(550)
+					display: block
+					margin-left: 0
+					margin-top: 10px
 	&-title
 		width: 100%
 		font-size: 200px
 		font-weight: 200
 		margin-bottom: 34px
+		+r(550)
+			font-size: 150px
+		+r(400)
+			font-size: 120px
 	&-message
 		width: 100%
 
