--- a/src/sass/components/_button.sass
+++ b/src/sass/components/_button.sass
@@ -87,6 +87,10 @@
 		display: block
 		width: 100%
 		height: 100%
+	+r(450)
+		right: 0
+		top: -2px
+		padding: 5px
 
 .link
 	font-size: $font-size
