--- a/src/templates/4-0-agency.pug
+++ b/src/templates/4-0-agency.pug
@@ -8,7 +8,7 @@ block content
 	.barba-container(data-namespace="about")
 		.block.about
 			.logo-wrap.bg-brend
-				a(href="/home.html")
+				a(href="./home.html")
 					+icon('logo')
 			.block-content.bg-brend
 				
