--- a/src/templates/partials/_modals.pug
+++ b/src/templates/partials/_modals.pug
@@ -9,26 +9,26 @@
 			//- 	.navigation-link-wrap
 			//- 		a.navigation-link__item.modal-link(href="/6-0-contacts.html") Business request
 			//- 		a.navigation-link__item.modal-link(href="/7-0-Become-model.html") Become a model
-			a(href="/home.html").link-logo
+			a(href="./home.html").link-logo
 				+icon('logo')
 			.pages-links
 				ul
 					li.pages-links__item
-						a(href="/4-0-agency.html") 
+						a(href="./4-0-agency.html") 
 							span.modal-link Agency
 					li.pages-links__item
-						a(href="/2-0-models.html") 
+						a(href="./2-0-models.html") 
 							span.modal-link Models
 					li.pages-links__item
-						a(href="/5-0-gallery.html")
+						a(href="./5-0-gallery.html")
 							span.modal-link Gallery
 					li.pages-links__item
-						a(href="/6-0-contacts.html")
+						a(href="./6-0-contacts.html")
 							span.modal-link Contacts
 					li.pages-links__item
-						a.navigation-link__item.modal-link(href="/6-0-contacts.html") Business request
+						a.navigation-link__item.modal-link(href="./6-0-contacts.html") Business request
 					li.pages-links__item
-						a.navigation-link__item.modal-link(href="/7-0-Become-model.html") Become a model
+						a.navigation-link__item.modal-link(href="./7-0-Become-model.html") Become a model
 					
 			//- .navigation-link.social-links
 			//- 	a.navigation-link__item(href="#") facebook
