--- a/src/templates/partials/_modals.pug
+++ b/src/templates/partials/_modals.pug
@@ -11,6 +11,7 @@
 			//- 		a.navigation-link__item.modal-link(href="/7-0-Become-model.html") Become a model
 			a(href="./home.html").link-logo
 				+icon('logo')
+			a.navigation-lang.link-lang(href="#") рус
 			.pages-links
 				ul
 					li.pages-links__item
