--- a/src/templates/3-0-inner.pug
+++ b/src/templates/3-0-inner.pug
@@ -79,11 +79,14 @@ block content
 										.play-button-icon
 							.swiper-slide.swiper-slide-social(data-link="social-bttn")
 								+share-block
-						.swiper-pagination
 						.swiper-scrollbar.inner-slider-bar
 						.swiper-navigation
-							button.portfolio-bttn.slide-target.active(data-slide="swiper-slide-portfolio") portfolio
-							button.editorial-bttn.slide-target(data-slide="swiper-slide-editorial") editorial
-							button.polaroids-bttn.slide-target(data-slide="swiper-slide-polaroids") polaroids
-							button.video-bttn.slide-target(data-slide="swiper-slide-video") video
-							button.social-bttn.slide-target(data-slide="swiper-slide-social") social
+							.slide-target(data-slide="portfolio-bttn") portfolio
+							.slide-target(data-slide="editorial-bttn") editorial
+							.slide-target(data-slide="polaroids-bttn") polaroids
+							.slide-target(data-slide="video-bttn") video
+							.slide-target(data-slide="social-bttn") social
+						.navigation-link
+							.navigation-link-wrap
+								a.navigation-link__item(href="#") Previous
+								a.navigation-link__item(href="#") Next
