--- a/src/templates/layouts/_head.pug
+++ b/src/templates/layouts/_head.pug
@@ -2,7 +2,15 @@ meta(charset="utf-8")
 title= title || 'Template'
 meta(http-equiv="X-UA-Compatible" content="IE=Edge")
 meta(name="viewport" content="width=device-width, initial-scale=1")
-meta(name="theme-color" content="#f0eae8")
+link(rel="apple-touch-icon", sizes="180x180", href="/img/fav/apple-touch-icon.png")
+link(rel="icon", type="image/png", sizes="32x32", href="/img/fav/favicon-32x32.png")
+link(rel="icon", type="image/png", sizes="16x16", href="/img/fav/favicon-16x16.png")
+link(rel="manifest", href="/img/fav/site.webmanifest")
+link(rel="mask-icon", href="/img/fav/safari-pinned-tab.svg", color="#5bbad5")
+link(rel="shortcut icon", href="/img/fav/favicon.ico")
+meta(name="msapplication-TileColor", content="#f0eae8")
+meta(name="msapplication-config", content="/img/fav/browserconfig.xml")
+meta(name="theme-color", content="#f0eae8")
 meta(name="format-detection" content="telephone=no")
 link(rel="stylesheet" media="all" href="css/font.css")
 link(rel="stylesheet" media="all" href="css/app.css")
